block-scripts: add codegen to generate types from schema URI. block-template: use generated types to type root entity

--- a/packages/block-scripts/package.json
+++ b/packages/block-scripts/package.json
@@ -34,6 +34,8 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@babel/runtime": "^7.20.6",
+    "@blockprotocol/graph": "0.0.18",
+    "@blockprotocol/type-system": "^0.0.2",
     "babel-loader": "^9.1.0",
     "chalk": "5.1.2",
     "copy-webpack-plugin": "10.2.4",
