--- a/packages/block-template-react/package.json
+++ b/packages/block-template-react/package.json
@@ -19,9 +19,11 @@
   },
   "scripts": {
     "build": "block-scripts build",
+    "codegen": "block-scripts codegen",
     "dev": "block-scripts dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
+    "postinstall": "yarn codegen",
     "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit",
     "prepublishOnly": "PACKAGE_DIR=$(pwd) yarn workspace @local/package-chores exe scripts/cleanup-before-publishing.ts",
@@ -64,6 +66,7 @@
     "icon": "public/omega.svg",
     "image": "public/block-preview.png",
     "name": "block-template-react",
-    "protocol": "0.2"
+    "protocol": "0.3",
+    "schema": "https://alpha.hash.ai/@hash/types/entity-type/page/v/1"
   }
 }
