--- a/packages/block-template-react/package.json
+++ b/packages/block-template-react/package.json
@@ -19,11 +19,11 @@
   },
   "scripts": {
     "build": "block-scripts build",
+    "postbuild": "yarn codegen",
     "codegen": "block-scripts codegen",
     "dev": "block-scripts dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
-    "postinstall": "yarn codegen",
     "lint:eslint": "eslint --report-unused-disable-directives .",
     "lint:tsc": "tsc --noEmit",
     "prepublishOnly": "PACKAGE_DIR=$(pwd) yarn workspace @local/package-chores exe scripts/cleanup-before-publishing.ts",
