--- a/packages/@blockprotocol/graph/package.json
+++ b/packages/@blockprotocol/graph/package.json
@@ -75,7 +75,8 @@
     "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
     "json-schema-to-typescript": "^11.0.2",
-    "lit": "^2.4.1"
+    "lit": "^2.4.1",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
