--- a/packages/@blockprotocol/graph/package.json
+++ b/packages/@blockprotocol/graph/package.json
@@ -24,6 +24,9 @@
   "type": "module",
   "exports": {
     ".": "./dist/index.js",
+    "./codegen": [
+      "./dist/codegen.js"
+    ],
     "./react": "./dist/react.js",
     "./custom-element": "./dist/custom-element.js",
     "./graph-service-json": "./dist/graph-service-json.js",
@@ -39,6 +42,9 @@
     "*": {
       ".": [
         "./dist/index.d.ts"
+      ],
+      "codegen": [
+        "./dist/codegen.d.ts"
       ],
       "react": [
         "./dist/react.d.ts"
@@ -63,7 +69,7 @@
   "scripts": {
     "build": "yarn clean && tsc --skipLibCheck",
     "clean": "rimraf ./dist/",
-    "codegen": "json2ts src/type-resolver/entity-type-meta-schema.json --output src/type-resolver/entity-type-meta-schema.gen.ts",
+    "codegen": "json2ts src/codegen/entity-type-meta-schema.json --output src/codegen/entity-type-meta-schema.gen.ts",
     "fix:eslint": "eslint --fix .",
     "postinstall": "yarn codegen",
     "lint:eslint": "eslint --report-unused-disable-directives .",
