--- a/packages/block-template-react/package.json
+++ b/packages/block-template-react/package.json
@@ -33,7 +33,8 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@blockprotocol/graph": "0.0.18"
+    "@blockprotocol/graph": "0.0.18",
+    "@blockprotocol/type-system": "^0.0.2"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
