--- a/packages/block-template-custom-element/package.json
+++ b/packages/block-template-custom-element/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@blockprotocol/graph": "0.0.18",
-    "@blockprotocol/type-system": "^0.0.2",
+    "@blockprotocol/type-system": "0.0.2",
     "lit": "^2.4.1"
   },
   "devDependencies": {
