--- a/packages/block-template-react/package.json
+++ b/packages/block-template-react/package.json
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@blockprotocol/graph": "0.0.18",
-    "@blockprotocol/type-system": "^0.0.2"
+    "@blockprotocol/type-system": "0.0.2"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
