wip: 3d model viewer wrapper

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "workspaces": {
     "packages": [
       "apps/*",
+      "blocks/*",
       "crates/*",
       "packages/*",
       "packages/@blockprotocol/*",
