Generate TS types from schema URI, and use in block template (#861)
* utility in @blockprotocol/graph to generate types for a subgraph, given a URI to a json schema

* block-scripts: add codegen to generate types from schema URI. block-template: use generated types to type root entity

* move block codegen from postinstall to postbuild

* add entry to turbo.json

* remove codegen from yarn prepare

* add dependency to turbo.json

* add postinstall: codegen to templates via create-block-app

* specify block-template-x codegen deps

* add node-fetch dep to @blockprotocol/graph

* change generic passed to BlockGraphProperties

* rename generic from LinkData

* handle unconstrained links

* update protocol version in entity type meta schema

* casing consistency

* hyphens after jsdoc param names

* remove old jsdoc param

* remove unused type

* check typenames for clashes

* cleanup

* dep consistency

* handle very long type names when deduplicating

* better name clash handling. use EntityType from type-system, don't gen from metaschema

* remove unnecessary type generation

--- a/packages/block-template-react/package.json
+++ b/packages/block-template-react/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "build": "block-scripts build",
+    "codegen": "block-scripts codegen",
     "dev": "block-scripts dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
@@ -64,6 +65,7 @@
     "icon": "public/omega.svg",
     "image": "public/block-preview.png",
     "name": "block-template-react",
-    "protocol": "0.2"
+    "protocol": "0.3",
+    "schema": "https://alpha.hash.ai/@hash/types/entity-type/page/v/1"
   }
 }
