--- a/packages/@blockprotocol/graph/package.json
+++ b/packages/@blockprotocol/graph/package.json
@@ -70,7 +70,11 @@
   "dependencies": {
     "@blockprotocol/core": "0.0.12",
     "@blockprotocol/type-system": "0.0.2",
-    "lit": "^2.4.1"
+    "ajv": "^8.11.2",
+    "ajv-formats": "^2.1.1",
+    "json-schema-to-typescript": "^11.0.2",
+    "lit": "^2.4.1",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
