--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint:changeset": "changeset status",
     "lint:dependency-version-consistency": "check-dependency-version-consistency .",
     "lint:eslint": "turbo run --continue lint:eslint",
+    "lint:knip": "knip",
     "lint:lockfile-lint": "lockfile-lint --path yarn.lock --allowed-hosts registry.yarnpkg.com --allowed-schemes \"https:\"",
     "lint:markdownlint": "markdownlint --dot .",
     "lint:prettier": "prettier --cache --check --ignore-unknown .",
@@ -48,6 +49,7 @@
     "check-dependency-version-consistency": "3.0.3",
     "dotenv-flow": "3.2.0",
     "husky": "8.0.2",
+    "knip": "1.0.0-beta.9",
     "lint-staged": "13.0.4",
     "lockfile-lint": "4.9.6",
     "markdownlint-cli": "0.32.2",
