--- a/.github/actions/warm-up-repo/action.yml
+++ b/.github/actions/warm-up-repo/action.yml
@@ -30,7 +30,7 @@ runs:
     - run: yarn install --immutable
       shell: bash
       env:
-        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: "true"
+        PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: ${{ inputs.playwright-deps == '' }}
 
     - run: yarn workspace @apps/site playwright install-deps ${{ inputs.playwright-deps }}
       if: ${{ inputs.playwright-deps != '' }}
