--- a/.github/actions/warm-up-repo/action.yml
+++ b/.github/actions/warm-up-repo/action.yml
@@ -19,7 +19,7 @@ runs:
     - name: Cache Rust dependencies
       uses: Swatinem/rust-cache@v2
       with:
-        workspaces: crates/type-system
+        workspaces: libs/@blockprotocol/type-system/crate
 
     - name: Install Cargo-Make
       shell: bash
