--- a/libs/@blockprotocol/type-system/package.json
+++ b/libs/@blockprotocol/type-system/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "build": "yarn clean && yarn build:wasm && yarn optimize && yarn build:bundle",
     "build:bundle": "rollup -c --bundleConfigAsCjs",
-    "build:wasm": "(cd ../../../crates/type-system && cargo make build)",
+    "build:wasm": "cd crate && cargo make build",
     "clean": "rimraf ./dist/",
     "compressed-size": "yarn build && find dist -iname '*.js' -exec npx terser@latest --compress --mangle --output {} -- {} \\;",
     "fix:eslint": "eslint --fix .",
