--- a/knip.jsonc
+++ b/knip.jsonc
@@ -2,13 +2,21 @@
   "$schema": "https://unpkg.com/knip@next/schema.json",
   "ignore": ["**/*.d.ts"],
   "ignoreBinaries": ["docker-compose"],
-  "ignoreDependencies": ["@local/eslint-config", "eslint-import-resolver-typescript"],
+  "ignoreDependencies": [
+    "@local/eslint-config",
+    "eslint-import-resolver-typescript"
+  ],
   "workspaces": {
     ".": {
       "ignore": "infra"
     },
     "apps/site": {
-      "entry": "scripts/*.ts",
+      "entry": [
+        // This workspace uses the Next.js plugin including its default entry points, the rest is manual:
+        "scripts/*.ts",
+        // Currently unused files, here to stay:
+        "src/components/hiring-banner.tsx"
+      ],
       "project": "**/*.{ts,tsx}",
       "eslint": false
     },
@@ -17,9 +25,9 @@
       "eslint": false
     },
     // The dynamic setup of this workspace with the usage of `require()` in `.eslintrc.cjs` is a tough cookie for Knip,
-    // thinking every workspace uses all ESLint plugins. That's why Knip's ESLint plugin is disabled everywhere. This
-    // resulted in two false positives: eslint-import-resolver-typescript for this workspace, and @local/eslint-config
-    // for the others.
+    // thinking every workspace uses all ESLint plugins. That's why Knip's ESLint plugin is disabled everywhere else.
+    // This resulted in two false positives: eslint-import-resolver-typescript for this workspace, and
+    // @local/eslint-config for the others.
     "packages/@local/eslint-config": {
       "entry": [],
       "project": [],
