--- a/libs/@blockprotocol/type-system/package.json
+++ b/libs/@blockprotocol/type-system/package.json
@@ -65,6 +65,7 @@
     "@types/jest": "29.2.3",
     "@types/node": "18.11.10",
     "eslint": "8.29.0",
+    "fs-extra": "^10.1.0",
     "jest": "29.3.1",
     "rollup": "3.5.1",
     "ts-jest": "29.0.3",
