--- a/libs/@blockprotocol/type-system/tsconfig.json
+++ b/libs/@blockprotocol/type-system/tsconfig.json
@@ -1,6 +1,6 @@
 {
   // DOM and ESNext are needed for various WASM features
   "extends": "@local/tsconfig/dom.json",
-  "include": ["src", "test"],
+  "include": ["scripts", "src", "test"],
   "exclude": ["wasm", "dist"]
 }
