--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "check-dependency-version-consistency": "3.0.3",
     "dotenv-flow": "3.2.0",
     "husky": "8.0.2",
-    "knip": "1.0.0-beta.9",
+    "knip": "^1.0.0",
     "lint-staged": "13.0.4",
     "lockfile-lint": "4.9.6",
     "markdownlint-cli": "0.32.2",
