Revert "temporarily convert changesets to canary releases"
This reverts commit 176ec3af65d9d7a265cef94ec70b80f1b7f7b711.

--- a/packages/mock-block-dock/package.json
+++ b/packages/mock-block-dock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mock-block-dock",
-  "version": "0.0.39-canary-20230110182708",
+  "version": "0.0.38",
   "description": "A mock embedding application for Block Protocol blocks",
   "keywords": [
     "blockprotocol",
