--- a/packages/block-scripts/package.json
+++ b/packages/block-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-scripts",
-  "version": "0.0.19-canary-20230110182708",
+  "version": "0.0.18",
   "description": "Block development framework",
   "keywords": [
     "blockprotocol",
