--- a/packages/block-template-html/package.json
+++ b/packages/block-template-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-template-html",
-  "version": "0.1.9-canary-20230110182708",
+  "version": "0.1.8",
   "description": "Block Protocol block template for an html-based block",
   "keywords": [
     "blockprotocol",
@@ -34,7 +34,7 @@
   "dependencies": {},
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
-    "block-scripts": "0.0.19-canary-20230110182708",
+    "block-scripts": "0.0.18",
     "eslint": "8.29.0",
     "http-server": "14.1.1",
     "lnk-cli": "1.0.1",
