Add 'publish canary packages' manual GitHub action (#878)
* temporarily convert changesets to canary releases

* Revert "temporarily convert changesets to canary releases"

This reverts commit 176ec3af65d9d7a265cef94ec70b80f1b7f7b711.

* manually triggered canary release workflow

Co-authored-by: David @ HASH <6226576+nonparibus@users.noreply.github.com>

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -10,6 +10,9 @@
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": ["@apps/*", "@local/*"],
+  "snapshot": {
+    "useCalculatedVersion": true
+  },
   "___experimentalUnsafeOptions_WILL_CHANGE_IN_PATCH": {
     "updateInternalDependents": "always",
     "onlyUpdatePeerDependentsWhenOutOfRange": true
