--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -23,8 +23,8 @@
     "@aws-sdk/client-s3": "3.169.0",
     "@aws-sdk/client-ses": "3.169.0",
     "@blockprotocol/core": "0.0.12",
-    "@blockprotocol/graph": "0.0.18",
-    "@blockprotocol/hook": "0.0.8",
+    "@blockprotocol/graph": "0.1.0-canary-20230111084611",
+    "@blockprotocol/hook": "0.1.0-canary-20230111084611",
     "@emotion/cache": "^11.10.0",
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
@@ -67,7 +67,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
-    "mock-block-dock": "0.0.38",
+    "mock-block-dock": "0.1.0-canary-20230111084611",
     "mongodb": "^4.2.2",
     "next": "13.0.3",
     "next-connect": "^0.12.1",
