--- a/packages/block-scripts/package.json
+++ b/packages/block-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-scripts",
-  "version": "0.0.18",
+  "version": "0.1.0-canary-20230111084611",
   "description": "Block development framework",
   "keywords": [
     "blockprotocol",
@@ -34,8 +34,8 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "7.18.6",
     "@babel/runtime": "^7.20.6",
-    "@blockprotocol/graph": "0.0.18",
-    "@blockprotocol/type-system": "0.0.2",
+    "@blockprotocol/graph": "0.1.0-canary-20230111084611",
+    "@blockprotocol/type-system": "0.0.3-canary-20230111084611",
     "babel-loader": "^9.1.0",
     "chalk": "5.1.2",
     "copy-webpack-plugin": "10.2.4",
