--- a/packages/create-block-app/package.json
+++ b/packages/create-block-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-block-app",
-  "version": "0.0.10",
+  "version": "0.1.0-canary-20230111084611",
   "description": "Create new https://blockprotocol.org blocks",
   "keywords": [
     "blockprotocol",
