--- a/packages/mock-block-dock/package.json
+++ b/packages/mock-block-dock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mock-block-dock",
-  "version": "0.1.0-canary-20230111084611",
+  "version": "0.0.38",
   "description": "A mock embedding application for Block Protocol blocks",
   "keywords": [
     "blockprotocol",
@@ -38,9 +38,9 @@
   },
   "dependencies": {
     "@blockprotocol/core": "0.0.12",
-    "@blockprotocol/graph": "0.1.0-canary-20230111084611",
-    "@blockprotocol/hook": "0.1.0-canary-20230111084611",
-    "@blockprotocol/type-system": "0.0.3-canary-20230111084611",
+    "@blockprotocol/graph": "0.0.18",
+    "@blockprotocol/hook": "0.0.8",
+    "@blockprotocol/type-system": "0.0.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
