--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://unpkg.com/knip@next/schema.json",
+  "$schema": "https://unpkg.com/knip@1/schema.json",
   "ignore": ["**/*.d.ts"],
   "ignoreBinaries": ["docker-compose"],
   "ignoreDependencies": [
