--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
       "apps/*",
       "libs/@blockprotocol/*",
       "libs/@local/*",
+      "libs/@local/internal-api-client-generator/typescript",
       "libs/*"
     ],
     "nohoist": [
