--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,7 +156,7 @@ jobs:
     name: NPM Packages
     if: ${{ github.event_name == 'pull_request' }}
     runs-on: ubuntu-20.04
-    timeout-minutes: 30 ## https://github.com/actions/upload-artifact/issues/358
+    timeout-minutes: 60
 
     steps:
       - uses: actions/checkout@v3
@@ -242,7 +242,7 @@ jobs:
           - iphone
           - pixel
           - safari
-    timeout-minutes: 30 ## https://github.com/actions/upload-artifact/issues/358
+    timeout-minutes: 60
 
     steps:
       - uses: actions/checkout@v3
