--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -67,6 +67,7 @@
     "mongodb": "^4.2.2",
     "next": "13.0.7",
     "next-connect": "^0.12.1",
+    "next-http-proxy-middleware": "^1.2.5",
     "next-mdx-remote": "^4.0.3",
     "next-seo": "^5.5.0",
     "next-session": "^4.0.4",
@@ -114,6 +115,7 @@
     "@types/md5": "^2.3.2",
     "@types/micromatch": "^4.0.2",
     "@types/mime-types": "^2.1.1",
+    "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.6",
     "@types/nprogress": "^0.2.0",
     "@types/passport": "^1.0.11",
