--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
+    "@local/internal-api-client": "0.0.0-private",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@next/bundle-analyzer": "13.0.7",
