--- a/packages/block-template-custom-element/package.json
+++ b/packages/block-template-custom-element/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "build": "block-scripts build",
+    "codegen": "block-scripts codegen",
     "dev": "block-scripts dev",
     "fix:eslint": "eslint --fix .",
     "format": "prettier --write --ignore-unknown .",
@@ -33,6 +34,7 @@
   },
   "dependencies": {
     "@blockprotocol/graph": "0.0.18",
+    "@blockprotocol/type-system": "0.0.2",
     "lit": "^2.4.1"
   },
   "devDependencies": {
@@ -62,6 +64,7 @@
     "icon": "public/omega.svg",
     "image": "public/block-preview.png",
     "name": "block-template-custom-element",
-    "protocol": "0.2"
+    "protocol": "0.3",
+    "schema": "https://alpha.hash.ai/@hash/types/entity-type/page/v/1"
   }
 }
