--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -45,6 +45,6 @@
     "@local/tsconfig": "0.0.0-private",
     "eslint": "8.29.0",
     "rimraf": "^3.0.2",
-    "typescript": "4.9.4"
+    "typescript": "^4.0"
   }
 }
