--- a/libs/@blockprotocol/type-system/package.json
+++ b/libs/@blockprotocol/type-system/package.json
@@ -63,13 +63,13 @@
     "@rollup/plugin-typescript": "9.0.2",
     "@rollup/plugin-wasm": "6.0.1",
     "@types/jest": "29.2.5",
-    "@types/node": "18.11.10",
+    "@types/node": "^18.11.18",
     "eslint": "8.29.0",
     "fs-extra": "^10.1.0",
     "jest": "29.3.1",
     "rollup": "3.5.1",
     "ts-jest": "29.0.4",
     "tslib": "2.4.1",
-    "typescript": "4.9.4"
+    "typescript": "^4.0"
   }
 }
