--- a/libs/blockprotocol/package.json
+++ b/libs/blockprotocol/package.json
@@ -48,6 +48,6 @@
     "@types/prompt": "^1.1.4",
     "@types/react": "^18.0.25",
     "eslint": "8.29.0",
-    "typescript": "4.9.4"
+    "typescript": "^4.0"
   }
 }
