--- a/libs/block-template-custom-element/tsconfig.json
+++ b/libs/block-template-custom-element/tsconfig.json
@@ -9,7 +9,8 @@
     "noUncheckedIndexedAccess": true,
     "resolveJsonModule": true,
     "strict": true,
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
