--- a/libs/@local/eslint-config/package.json
+++ b/libs/@local/eslint-config/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-unicorn": "45.0.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "typescript": "^4.0"
   }
 }
