--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -64,7 +64,7 @@
     "@local/tsconfig": "0.0.0-private",
     "eslint": "8.31.0",
     "rimraf": "^3.0.2",
-    "typescript": "^4.0"
+    "typescript": "4.9.4"
   },
   "peerDependencies": {
     "react": "^18.0.0"
