--- a/libs/@blockprotocol/type-system/package.json
+++ b/libs/@blockprotocol/type-system/package.json
@@ -70,6 +70,6 @@
     "rollup": "3.5.1",
     "ts-jest": "29.0.4",
     "tslib": "2.4.1",
-    "typescript": "^4.0"
+    "typescript": "4.9.4"
   }
 }
