--- a/libs/block-scripts/package.json
+++ b/libs/block-scripts/package.json
@@ -44,7 +44,7 @@
     "sass-loader": "^12.6.0",
     "serve-handler": "^6.1.3",
     "style-loader": "^3.3.1",
-    "typescript": "^4.0",
+    "typescript": "4.9.4",
     "typescript-json-schema": "^0.53.0",
     "webpack": "^5.75.0",
     "webpack-assets-manifest": "^5.1.0",
