refactor: undo `skipLibCheck: true`

--- a/libs/block-template-custom-element/tsconfig.json
+++ b/libs/block-template-custom-element/tsconfig.json
@@ -9,8 +9,7 @@
     "noUncheckedIndexedAccess": true,
     "resolveJsonModule": true,
     "strict": true,
-    "useDefineForClassFields": false,
-    "skipLibCheck": true
+    "useDefineForClassFields": false
   },
   "include": ["src"]
 }
