--- a/libs/block-template-react/tsconfig.json
+++ b/libs/block-template-react/tsconfig.json
@@ -8,8 +8,7 @@
     "noEmit": true,
     "noUncheckedIndexedAccess": true,
     "resolveJsonModule": true,
-    "strict": true,
-    "skipLibCheck": true
+    "strict": true
   },
   "include": ["src"]
 }
