chore: cleanup README.md

--- a/libs/@local/internal-api-client-generator/typescript/package.json
+++ b/libs/@local/internal-api-client-generator/typescript/package.json
@@ -20,7 +20,7 @@
   "typings": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc --outDir dist/",
-    "prepare": "npm run build"
+    "prepare": "yarn build"
   },
   "dependencies": {
     "axios": "1.2.2"
