--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
+    "@local/internal-api-client": "0.0.0-private",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.4",
     "@next/bundle-analyzer": "13.0.7",
@@ -67,6 +68,7 @@
     "mongodb": "^4.2.2",
     "next": "13.0.7",
     "next-connect": "^0.12.1",
+    "next-http-proxy-middleware": "^1.2.5",
     "next-mdx-remote": "^4.0.3",
     "next-seo": "^5.5.0",
     "next-session": "^4.0.4",
