temporarily convert changesets to canary releases

--- a/packages/block-template-custom-element/package.json
+++ b/packages/block-template-custom-element/package.json
@@ -1,6 +1,6 @@
 {
   "name": "block-template-custom-element",
-  "version": "0.1.21",
+  "version": "0.0.0-canary-20230119201228",
   "description": "Block Protocol block template for a custom element-based block",
   "keywords": [
     "blockprotocol",
@@ -33,16 +33,16 @@
     "trailingComma": "all"
   },
   "dependencies": {
-    "@blockprotocol/graph": "0.0.18",
-    "@blockprotocol/type-system": "0.0.2",
+    "@blockprotocol/graph": "0.0.0-canary-20230119201228",
+    "@blockprotocol/type-system": "0.0.0-canary-20230119201228",
     "lit": "^2.4.1"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
     "@types/react-dom": "^18.0.9",
-    "block-scripts": "0.0.18",
+    "block-scripts": "0.0.0-canary-20230119201228",
     "eslint": "8.28.0",
-    "mock-block-dock": "0.0.38",
+    "mock-block-dock": "0.0.0-canary-20230119201228",
     "prettier": "2.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
