--- a/packages/@blockprotocol/hook/package.json
+++ b/packages/@blockprotocol/hook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/hook",
-  "version": "0.0.8",
+  "version": "0.0.0-canary-20230119201228",
   "description": "Implementation of the Block Protocol Hook service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -53,7 +53,7 @@
   },
   "dependencies": {
     "@blockprotocol/core": "0.0.12",
-    "@blockprotocol/graph": "0.0.18"
+    "@blockprotocol/graph": "0.0.0-canary-20230119201228"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
