--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -126,6 +126,7 @@
     "@types/react-html-parser": "^2.0.2",
     "@types/react-slick": "^0.23.10",
     "@types/sanitize-html": "^2.6.2",
+    "@types/stripe": "^8.0.417",
     "@types/tar": "^6.1.3",
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
