--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -22,8 +22,8 @@
     "@aws-sdk/client-s3": "3.169.0",
     "@aws-sdk/client-ses": "3.169.0",
     "@blockprotocol/core": "0.0.13",
-    "@blockprotocol/graph": "0.1.0-canary-20230130171019",
-    "@blockprotocol/hook": "0.1.0-canary-20230130171019",
+    "@blockprotocol/graph": "0.0.19",
+    "@blockprotocol/hook": "0.0.9",
     "@cloudflare/stream-react": "^1.8.0",
     "@emotion/cache": "^11.10.0",
     "@emotion/react": "^11.10.0",
@@ -64,7 +64,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
-    "mock-block-dock": "0.1.0-canary-20230130171019",
+    "mock-block-dock": "0.0.39",
     "mongodb": "^4.2.2",
     "next": "13.0.7",
     "next-connect": "^0.12.1",
