Set .npmrc in canary release flow (#921)

--- a/.github/workflows/canary-release.yml
+++ b/.github/workflows/canary-release.yml
@@ -20,6 +20,10 @@ jobs:
           git push
           git checkout `git rev-parse HEAD~1`
 
+          cat << EOF > "$HOME/.npmrc"
+            //registry.npmjs.org/:_authToken=$NPM_TOKEN
+          EOF
+
           yarn changeset publish --tag canary
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
