feat: track requests for block source hitting r2, and expose last week's downloads in api

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
       "libs/@blockprotocol/*",
       "libs/@local/*",
       "libs/@local/internal-api-client-generator/typescript",
-      "libs/*"
+      "libs/*",
+      "infra/*"
     ],
     "nohoist": [
       "**/@types/css-font-loading-module",
