--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.169.0",
     "@aws-sdk/client-ses": "3.169.0",
-    "@blockprotocol/core": "0.0.13",
-    "@blockprotocol/graph": "0.0.19",
-    "@blockprotocol/hook": "0.0.9",
+    "@blockprotocol/core": "0.0.14-canary-20230131114622",
+    "@blockprotocol/graph": "0.0.20-canary-20230131114622",
+    "@blockprotocol/hook": "0.0.10-canary-20230131114622",
     "@cloudflare/stream-react": "^1.8.0",
     "@emotion/cache": "^11.10.0",
     "@emotion/react": "^11.10.0",
@@ -64,7 +64,7 @@
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "mime-types": "^2.1.35",
-    "mock-block-dock": "0.0.39",
+    "mock-block-dock": "0.0.40-canary-20230131114622",
     "mongodb": "^4.2.2",
     "next": "13.0.7",
     "next-connect": "^0.12.1",
