--- a/libs/@blockprotocol/hook/package.json
+++ b/libs/@blockprotocol/hook/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/hook",
-  "version": "0.0.10-canary-20230131114622",
+  "version": "0.0.9",
   "description": "Implementation of the Block Protocol Hook service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -52,7 +52,7 @@
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@blockprotocol/core": "0.0.14-canary-20230131114622"
+    "@blockprotocol/core": "0.0.13"
   },
   "devDependencies": {
     "@local/eslint-config": "0.0.0-private",
