--- a/libs/mock-block-dock/package.json
+++ b/libs/mock-block-dock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mock-block-dock",
-  "version": "0.0.40-canary-20230131114622",
+  "version": "0.0.39",
   "description": "A mock embedding application for Block Protocol blocks",
   "keywords": [
     "blockprotocol",
@@ -37,9 +37,9 @@
     "run-dev-server": "cross-env NODE_ENV=development webpack-dev-server --config dev/webpack.config.js"
   },
   "dependencies": {
-    "@blockprotocol/core": "0.0.14-canary-20230131114622",
-    "@blockprotocol/graph": "0.0.20-canary-20230131114622",
-    "@blockprotocol/hook": "0.0.10-canary-20230131114622",
+    "@blockprotocol/core": "0.0.13",
+    "@blockprotocol/graph": "0.0.19",
+    "@blockprotocol/hook": "0.0.9",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@lit-labs/react": "^1.0.4",
