Track block downloads, expose last week's count via API (#923)
* feat: track requests for block source hitting r2, and expose last week's downloads in api

* catch errors in fetching remote schema

* rename tab in block hub mobile view

* rename infra package. sort package list

* consistent async/await

---------

Co-authored-by: David @ HASH <6226576+nonparibus@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "workspaces": {
     "packages": [
       "apps/*",
+      "infra/*",
       "libs/@blockprotocol/*",
       "libs/@local/*",
       "libs/@local/internal-api-client-generator/typescript",
