Revert "temporarily convert changesets to canary releases"
This reverts commit b75c3c37312bf77c05e3f4ed1f9e67c3d030bb51.

--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/graph",
-  "version": "0.1.0-canary-20230206110959",
+  "version": "0.0.19",
   "description": "Implementation of the Block Protocol Graph service specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -79,7 +79,7 @@
   },
   "dependencies": {
     "@blockprotocol/core": "0.0.13",
-    "@blockprotocol/type-system": "0.0.4-canary-20230206110959",
+    "@blockprotocol/type-system": "0.0.3",
     "ajv": "^8.11.2",
     "ajv-formats": "^2.1.1",
     "json-schema-to-typescript": "^11.0.2",
