prep for new type editor. start to update hub for 0.3

--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -57,6 +57,7 @@
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
+    "@blockprotocol/type-system": "0.0.3",
     "es-module-lexer": "^0.10.5",
     "uuid": "^8.3.2"
   },
