--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -24,7 +24,7 @@
     "@blockprotocol/core": "0.0.13",
     "@blockprotocol/graph": "0.0.19",
     "@blockprotocol/hook": "0.0.9",
-    "@blockprotocol/type-system": "^0.0.3",
+    "@blockprotocol/type-system": "0.0.3",
     "@cloudflare/stream-react": "^1.8.0",
     "@emotion/cache": "^11.10.0",
     "@emotion/react": "^11.10.0",
