--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/core",
-  "version": "0.0.14-canary-20230208173733",
+  "version": "0.0.13",
   "description": "Implementation of the Block Protocol Core specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
@@ -57,7 +57,7 @@
     "lint:tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@blockprotocol/type-system": "0.0.4-canary-20230208173733",
+    "@blockprotocol/type-system": "0.0.3",
     "es-module-lexer": "^0.10.5",
     "uuid": "^8.3.2"
   },
