Revert "temporarily convert changesets to canary releases"
This reverts commit 763ca1031ad1969532a70f6775abdf6574108895.

--- a/libs/create-block-app/package.json
+++ b/libs/create-block-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-block-app",
-  "version": "0.1.0-canary-20230208204713",
+  "version": "0.0.11",
   "description": "Create new https://blockprotocol.org blocks",
   "keywords": [
     "blockprotocol",
