Revert "temporarily convert changesets to canary releases"
This reverts commit 4d15bf5c1d97133e627b4d52ae925c386d7b7d1c.

--- a/libs/@blockprotocol/core/package.json
+++ b/libs/@blockprotocol/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockprotocol/core",
-  "version": "0.0.14-canary-20230209090045",
+  "version": "0.0.13",
   "description": "Implementation of the Block Protocol Core specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
