Run it on the graph

--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -107,6 +107,7 @@
     "node-fetch": "^3.3.0"
   },
   "devDependencies": {
+    "eslint-plugin-custom": "0.0.0-private",
     "@local/eslint-config": "0.0.0-private",
     "@local/tsconfig": "0.0.0-private",
     "@rollup/plugin-commonjs": "24.0.1",
