rename block protocol 'services' to 'modules'

--- a/libs/@blockprotocol/graph/package.json
+++ b/libs/@blockprotocol/graph/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@blockprotocol/graph",
   "version": "0.0.19",
-  "description": "Implementation of the Block Protocol Graph service specification for blocks and embedding applications",
+  "description": "Implementation of the Block Protocol Graph module specification for blocks and embedding applications",
   "keywords": [
     "blockprotocol",
     "blocks",
@@ -38,10 +38,10 @@
       "require": "./dist/cjs/custom-element.cjs",
       "import": "./dist/es/custom-element.js"
     },
-    "./graph-service-json": {
-      "types": "./dist/cjs/graph-service-json.d.ts",
-      "require": "./dist/cjs/graph-service-json.cjs",
-      "import": "./dist/es/graph-service-json.js"
+    "./graph-module-json": {
+      "types": "./dist/cjs/graph-module-json.d.ts",
+      "require": "./dist/cjs/graph-module-json.cjs",
+      "import": "./dist/es/graph-module-json.js"
     },
     "./internal": {
       "types": "./dist/cjs/internal.d.ts",
@@ -72,8 +72,8 @@
       "custom-element": [
         "./dist/cjs/custom-element.d.ts"
       ],
-      "graph-service-json": [
-        "./dist/cjs/graph-service-json.d.ts"
+      "graph-module-json": [
+        "./dist/cjs/graph-module-json.d.ts"
       ],
       "internal": [
         "./dist/cjs/internal.d.ts"
